// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CCloseButton customize 1`] = `
<div>
  <button
    aria-label="Close"
    class="btn btn-close btn-close-white bazinga"
    disabled=""
    type="button"
  />
</div>
`;

exports[`loads and displays CCloseButton component 1`] = `
<div>
  <button
    aria-label="Close"
    class="btn btn-close"
    type="button"
  />
</div>
`;
